News UAT/force-app/main/default/objects/SFDC_Plan2User__c/SFDC_Plan2User__c.object-meta.xml
<CustomObject>
    <description>Connector object that ties an Account Plan to a User.</description>
    <label>Plan2User</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Account Planning Team</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan2User</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>