News UAT/force-app/main/default/objects/SFDC_Plan2User__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Executive Committee</fullName>
            </value>
            <value>
                <fullName>Products Lead</fullName>
            </value>
            <value>
                <fullName>Sales Engineering</fullName>
            </value>
            <value>
                <fullName>Sales Management</fullName>
            </value>
            <value>
                <fullName>Services Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>