News UAT/force-app/main/default/objects/SFDC_Plan2User__c/fields/SFDC_Acct_Plan__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Acct_Plan__c</fullName>
    <label>Account Plan</label>
    <referenceTo>SFDC_Acct_Plan__c</referenceTo>
    <relationshipLabel>Account Plan Team</relationshipLabel>
    <relationshipName>R00N60000001PRPZEA4</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>