News UAT/force-app/main/default/objects/SFDC_Plan2User__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N60000001PRPbEAO</relationshipName>
    <type>Lookup</type>
</CustomField>